Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42435

Attach to Qml Port, debug hangs on large project

XMLWordPrintable

    • ffe538a565e2f14ad276078891f18ec90d09be82

      • Launch the application with qmljsdebugger=port:3768, block (the app waits for connection)
      • In Qt Creator, use Attach to QML Port
      • Any breakpoint I set is then hit, I'm happy, I can see some context.
      • On a very simple project, I can hit step out, into, etc, and continue. But on larger projects, as soon as I try to continue, the execution hangs. I then attach to the process using Visual Studio.
      • I hit pause
      • The execution seems to be running in an infinite loop while executing
        ArgumentCollectJob::run() at line 285 of qv4debugging (statement is collector->collect(qName, v)
      • qName here has the name of a property in the breakpoint's context. nFormals is 30 and i is 0.
      • follows what appear to be an infinite recursion of calls to
      -> Qt5Qmld.dll!QV4::Debugging::Debugger::Collector::collect(const QV4::ObjectRef object) Line 746	C++
      -> Qt5Qmld.dll!QV4::Debugging::Debugger::Collector::collect(const QString & name, const QV4::ScopedValue & value) Line 719	C++ 	
      -> Qt5Qmld.dll!VariableCollector::addObject(const QString & name, QV4::ValueRef value) Line 255	C++
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            maxlem Maxime Lemonnier
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes